# VastTest

./: CMakeLists.txt  README.md  SimObject.h  Simulation.cpp  Simulation.h  Station.cpp  Station.h  Truck.cpp  Truck.h  build.sh  main.cpp  test.sh
src/: SimObject.h  Simulation.cpp  Simulation.h  Station.cpp  Station.h  Truck.cpp  Truck.h  globals.h  main.cpp
test/: test_main.cpp  test_simulation.cpp
unity/: unity.c
